# Popple

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  build.gradle  compile_commands.json  gradle.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/bubbleshooter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: BasicShader.glsl
app/src/main/assets/models/: BubbleBase.glb  BubbleBase_01.glb  ElectroShield.glb  Quad.glb  TowerBase.glb
app/src/main/assets/shaders/: AnemoBubble_PS.glsl  AnemoBubble_VS.glsl  CommonBubble_PS.glsl  CommonBubble_VS.glsl  ElectroBubble_PS.glsl  ElectroBubble_VS.glsl  background.fs  basicShader.fs  basicShader.vert  bloom.fs  bloomBlur.fs  bloomCompose.fs  bloomFilter.frag  bubbleBasic.fs  bubbleBasic.vs  copy.frag  defaultBackground.frag  outline.fs  tonemap.frag  tonemap.fs  towerBasic.fs  towerBasic.vs
app/src/main/cpp/: Android.cpp  Android.h  Assets.cpp  Assets.h  Authentication.cpp  Authentication.h  Button.cpp  Button.h  CMakeLists.txt  DrawableEntity.cpp  DrawableEntity.h  EffectManager.cpp  EffectManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameCanvas.cpp  GameCanvas.h  GameManager.cpp  GameManager.h  GameStateManager.cpp  GameStateManager.h  GameUI.cpp  GameUI.h  GameplayScene.cpp  GameplayScene.h  Globals.cpp  Globals.h  HomeCanvas.cpp  HomeCanvas.h  HomeScene.cpp  HomeScene.h  IndexBuffer.cpp  IndexBuffer.h  LevelButton.cpp  LevelButton.h  LevelConfig.h  (+71 more)
app/src/main/cpp/editor/: EditorScene.cpp  EditorScene.h  NetworkReceiver.cpp  NetworkReceiver.h
app/src/main/java/com/example/bubbleshooter/: GameRenderer.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/bubbleshooter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
